welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
override def run() {
^Array2:1: error: expected start of definition
override def run() {
         ^Array2:14: error: expected class or object definition
def tableau():Array[Color] = {
^Array2:25: error: expected class or object definition
def peindre(motif:Array[Color],m:int){
^