welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T=new Array[Color](getMondeHauteur())
  var m= 0
  T=tableau()
  for (l <- 1 to getMondeLargeur()-1){
    gauche()
    avance()
    droite()
    m= val decalage = litMessage().toInt
    peindre(T,m)
  }
}

def tableau():Array[Color] = {
  var motif=new Array[Color](getMondeHauteur())
  for (compteur <- 0 to getMondeHauteur()-1 ){
    motif(compteur)=getCouleurSol()
    avance()
  }
  for (compteur <- 0 to getMondeHauteur()-1){
    recule()
  }
  return motif
}
def peindre(motif:Array[Color],m:int){
  for (long<- 1 to getMondeHauteur()){
    baisseBrosse()
    setCouleurBrosse((motif((long-1-m)%getMondeHauteur()))
    leveBrosse()
    avance()
  }
 	for (compteur <- 0 to getMondeHauteur()-1){
    recule()
}